feat: implement incremental source update, progress tracking and semantic test validation